--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,7 +9,7 @@
             <br>
             <p>
                 <button type="submit" value="Login" class="btn btn-success">
-                    Login
+                    Вхід
                 </button>
             </p>
         </form>
