--- a/templates/registration/user_logout.html
+++ b/templates/registration/user_logout.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div>
-    <p1>Please login</p1>
-</div>
+    <div>
+        <h1>Будь ласка, увійдіть</h1>
+    </div>
 {% endblock %}
