--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -9,7 +9,7 @@
             <br>
             <p>
                 <button type="submit" value="Login" class="btn btn-success">
-                    Registration
+                    Реєстрація
                 </button>
             </p>
         </form>
